# secateur

./: .gitignore  .pre-commit-config.yaml  AGENT.md  README.md  compat.py  metadata.txt  plugin.py  pyproject.toml  temp.txt
core/: AGENT.md  atlas_legend_exporter.py  constants.py  export.py  geopdf_utils.py  image_manager.py  intersector.py  legend_exporter.py  logger.py  utils.py
core/export/: AGENT.md  __init__.py
core/export/csv/: export.py
core/export/geopdf/: __init__.py  config.py  exporter.py  extent.py  layout.py  layout_builder.py  layout_items.py  layout_populator.py  map_configurator.py  service.py  template_loader.py  visibility.py
core/export/pdf/: AGENT.md
core/export/pdf/common/: __init__.py  extent.py  layout_items.py  metadata.py  models.py  path_resolver.py  pdf_export.py  qgis_utils.py  template_loader.py  visibility.py
core/export/pdf/geopdf/: config.py  items.py  layout.py  layout_items.py  (+1 more)
core/intersection/: AGENT.md  intersection_context.py  intersection_metrics.py  intersection_processing.py  intersection_results.py  intersector.py  profiling.py
core/utils/: AGENT.md  feedback.py  formatting.py  layer_resolver.py  layers.py  layouts.py  path.py  rendering.py  visibility.py
docs/: module_dependency_graph.md
resources/: legend_layout.qpt  report_page.qpt  simple_legend_layout.qpt
tests/: README.md  conftest.py  test_compat.py  test_export_csv.py  test_export_pdf.py  test_intersection.py  test_service.py  test_utils.py
ui/: AGENT.md  panel.py  service.py  settings.py
ui/widgets/: basemap_combo.py  settings_dialog.py
(+31 files in other folders)
