[project]
name = "secateur"
version = "0.1.0"
requires-python = ">=3.12"

[dependency-groups]
dev = [
    "ruff",
 "pyright",
 "pre-commit",
 "qgis-stubs",
 "pyqt5-stubs>=5.15.6.0",
 "pytest",
 "pytest-qgis>=2.0.0",
]

[tool.ruff]
target-version = "py312"
line-length = 120
extend-exclude = ["stubs"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "basic"
stubPath = "stubs"
# stub-only packages (qgis, PyQt5) have no source — this is expected
reportMissingModuleSource = false
ignore = ["**/__pycache__"]
# Mirrors [tool.pytest.ini_options].pythonpath: tests import the plugin
# as `secateur.xxx` (see pytest config below for why), which requires the
# parent directory to be on the module search path.
extraPaths = [".."]

[tool.pytest.ini_options]
testpaths = ["tests"]
qgis_gui_enabled = false
# The plugin package uses relative imports throughout (e.g. `from ..core
# import ...`), which only resolve when the code is imported as part of
# the `secateur` package (as QGIS itself does when loading the plugin).
# Adding the parent directory to sys.path lets tests do
# `from secateur.core... import ...` instead of importing submodules as
# bare top-level modules, which is what the previous placeholder test
# suite ran into ("cannot import due to relative import issues").
pythonpath = [".."]
